--- a/styles/contact.css
+++ b/styles/contact.css
@@ -258,20 +258,111 @@ main .contents .firstBox .heading .title02 {
   margin: -0.25em 0 0 0;
 }
 
-main .contents .firstBox .details h1 {
+main .contents .firstBox .details form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: calc(100vw - 30px);
+  padding: 0 0 2em 0;
+}
+
+main .contents .firstBox .details form .contactNameContainer {
+  width: 100%;
+  padding: 0 0 2em 0;
+}
+
+main .contents .firstBox .details form .contactNameContainer .contactNameTitle {
+  width: 100%;
   font-family: "Vollkorn", serif;
   font-size: 26px;
   font-style: italic;
   font-weight: 700;
   color: #3D362C;
-  padding: 0 0 1em 0;
+  padding: 0 0 0.5em 0;
 }
 
-main .contents .firstBox .details p {
-  color: #3D362C;
-  font-size: 15px;
-  line-height: 2em;
+main .contents .firstBox .details form .contactNameContainer .contactNameInput {
+  width: 100%;
+  padding: 1em 0 1em 1em;
+  border: solid 2px #550710;
+}
+
+main .contents .firstBox .details form .contactEmailContainer {
+  width: 100%;
   padding: 0 0 2em 0;
+}
+
+main .contents .firstBox .details form .contactEmailContainer .contactEmailTitle {
+  width: 100%;
+  font-family: "Vollkorn", serif;
+  font-size: 26px;
+  font-style: italic;
+  font-weight: 700;
+  color: #3D362C;
+  padding: 0 0 0.5em 0;
+}
+
+main .contents .firstBox .details form .contactEmailContainer .contactEmailInput {
+  width: 100%;
+  padding: 1em 0 1em 1em;
+  border: solid 2px #550710;
+}
+
+main .contents .firstBox .details form .contactTextContainer {
+  width: 100%;
+  padding: 0 0 2em 0;
+}
+
+main .contents .firstBox .details form .contactTextContainer .contactTextTitle {
+  width: 100%;
+  font-family: "Vollkorn", serif;
+  font-size: 26px;
+  font-style: italic;
+  font-weight: 700;
+  color: #3D362C;
+  padding: 0 0 0.5em 0;
+}
+
+main .contents .firstBox .details form .contactTextContainer .contactTextInput {
+  width: 100%;
+  padding: 1em 0 1em 1em;
+  border: solid 2px #550710;
+}
+
+main .contents .firstBox .details form .contactButtonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+main .contents .firstBox .details form .contactButtonContainer .contactButton {
+  width: 100%;
+  height: 50px;
+  border-radius: 0;
+  border: none;
+  color: #FFFFFF;
+  background-color: #550710;
+  font-size: 18px;
+  text-transform: capitalize;
+  padding: 0;
+  margin: 0;
 }
 
 main .contents .firstBox .buttonWrapper {
