--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -216,20 +216,97 @@ main {
 
             .details {
 
-                h1 {
-                    font-family: $fontFamily;
-                    font-size: $mobileSubHeadings;
-                    font-style: italic;
-                    font-weight: 700;
-                    color: $black;
-                    padding: 0 0 1em 0;
-                }
-
-                p {
-                    color: $black;
-                    font-size: $mobileParagraph;
-                    line-height: 2em;
+                form {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    width: calc(100vw - 30px);
                     padding: 0 0 2em 0;
+
+                    .contactNameContainer {
+                        width: 100%;
+                        padding: 0 0 2em 0;
+
+                        .contactNameTitle {
+                            width: 100%;
+                            font-family: $fontFamily;
+                            font-size: $mobileSubHeadings;
+                            font-style: italic;
+                            font-weight: 700;
+                            color: $black;
+                            padding: 0 0 0.5em 0;
+                        }
+
+                        .contactNameInput {
+                            width: 100%;
+                            padding: 1em 0 1em 1em;
+                            border: solid 2px $darkRed;
+                        }
+                    }
+
+                    
+                    .contactEmailContainer {
+                        width: 100%;
+                        padding: 0 0 2em 0;
+
+                        .contactEmailTitle {
+                            width: 100%;
+                            font-family: $fontFamily;
+                            font-size: $mobileSubHeadings;
+                            font-style: italic;
+                            font-weight: 700;
+                            color: $black;
+                            padding: 0 0 0.5em 0;
+                        }
+
+                        .contactEmailInput {
+                            width: 100%;
+                            padding: 1em 0 1em 1em;
+                            border: solid 2px $darkRed;
+                        }
+                    }
+
+                    .contactTextContainer {
+                        width: 100%;
+                        padding: 0 0 2em 0;
+
+                        .contactTextTitle {
+                            width: 100%;
+                            font-family: $fontFamily;
+                            font-size: $mobileSubHeadings;
+                            font-style: italic;
+                            font-weight: 700;
+                            color: $black;
+                            padding: 0 0 0.5em 0;
+                        }
+
+                        .contactTextInput {
+                            width: 100%;
+                            padding: 1em 0 1em 1em;
+                            border: solid 2px $darkRed;
+                        }
+                    }
+
+                    .contactButtonContainer {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 100%;
+
+                        .contactButton {
+                            width: 100%;
+                            height: 50px;
+                            border-radius: 0;
+                            border: none;
+                            color: $white;
+                            background-color: $darkRed;
+                            font-size: $mobileButtonText;
+                            text-transform: capitalize;
+                            padding: 0;
+                            margin:0;
+                        }
+                    }
                 }
             }
 
